--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   glutton: ^2.0.0
   flutter_modular: ^5.0.3
   provider: ^6.0.5
+  flutter_svg: ^2.0.6
 
 dev_dependencies:
   flutter_test:
