wip: login auth

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   flutter_modular: ^5.0.3
   provider: ^6.0.5
   flutter_svg: ^2.0.6
+  dio: ^5.2.1+1
 
 dev_dependencies:
   flutter_test:
