--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,13 +34,14 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
-  google_fonts: ^4.0.0
+  dio: ^5.2.1+1
   glutton: ^2.0.0
-  flutter_modular: ^5.0.3
   provider: ^6.0.5
   flutter_svg: ^2.0.6
-  dio: ^5.2.1+1
+  google_fonts: ^4.0.0
+  cupertino_icons: ^1.0.2
+  flutter_modular: ^5.0.3
+  shared_preferences: ^2.2.1
 
 dev_dependencies:
   flutter_test:
