--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,9 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   dio: ^5.2.1+1
+  lottie: ^2.3.2
   glutton: ^2.0.0
+  shimmer: ^3.0.0
   provider: ^6.0.5
   flutter_svg: ^2.0.6
   google_fonts: ^4.0.0
