--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   google_fonts: ^4.0.0
   cupertino_icons: ^1.0.2
   flutter_modular: ^5.0.3
+  package_info_plus: ^4.1.0
   shared_preferences: ^2.2.1
 
 dev_dependencies:
