--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   flutter_modular: ^5.0.3
   package_info_plus: ^4.1.0
   shared_preferences: ^2.2.1
+  flutter_staggered_grid_view: ^0.4.0
 
 dev_dependencies:
   flutter_test:
