--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   package_info_plus: ^4.1.0
   shared_preferences: ^2.2.1
   flutter_staggered_grid_view: ^0.4.0
+  pull_to_refresh: ^2.0.0
 
 dev_dependencies:
   flutter_test:
