--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   shimmer: ^3.0.0
   provider: ^6.0.5
   flutter_svg: ^2.0.6
+  fluttertoast: ^8.2.2
   google_fonts: ^4.0.0
   cupertino_icons: ^1.0.2
   flutter_modular: ^5.0.3
