--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   dio: ^5.2.1+1
+  jiffy: ^4.1.0
   lottie: ^2.3.2
   glutton: ^2.0.0
   shimmer: ^3.0.0
