--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,9 @@ dependencies:
   package_info_plus: ^4.1.0
   shared_preferences: ^2.2.1
   pull_to_refresh: ^2.0.0
+  firebase_core: ^1.12.0
+  firebase_messaging: ^11.2.7
+  flutter_local_notifications: ^9.3.3
 
 dev_dependencies:
   flutter_test:
